# sat

./: .gitignore  CMakeLists.txt  README.md  TODO.md
modules/builtin/: CMakeLists.txt
modules/builtin/sat_array/lib/: CMakeLists.txt
modules/builtin/sat_array/manpages/: sat_array.3
modules/builtin/sat_array/tests/: CMakeLists.txt  test_sat_array_clone.c
modules/builtin/sat_cache/lib/: CMakeLists.txt
modules/builtin/sat_cache/manpages/: CMakeLists.txt  sat_cache.3
modules/builtin/sat_cache/samples/: CMakeLists.txt
modules/builtin/sat_cache/tests/: CMakeLists.txt
modules/builtin/sat_channel/lib/: CMakeLists.txt
modules/builtin/sat_channel/manpages/: CMakeLists.txt  sat_channel.3
modules/builtin/sat_channel/samples/: CMakeLists.txt
modules/builtin/sat_channel/tests/: CMakeLists.txt  test_sat_channel.c
modules/builtin/sat_directory/lib/: CMakeLists.txt
modules/builtin/sat_directory/manpages/: CMakeLists.txt  sat_directory.3
modules/builtin/sat_directory/samples/: CMakeLists.txt  sat_directory_sample.c
modules/builtin/sat_directory/tests/: CMakeLists.txt
modules/builtin/sat_discovery/lib/: CMakeLists.txt
modules/builtin/sat_discovery/manpages/: CMakeLists.txt  sat_discovery.3
modules/builtin/sat_discovery/samples/: CMakeLists.txt  sat_discovery_client.c  sat_discovery_protocol_sample.c  sat_discovery_server.c  sat_discovery_vanish.c
modules/builtin/sat_discovery/tests/: CMakeLists.txt
modules/builtin/sat_event/lib/: CMakeLists.txt
modules/builtin/sat_event/manpages/: CMakeLists.txt  sat_event.3
modules/builtin/sat_event/samples/: CMakeLists.txt
modules/builtin/sat_event/tests/: CMakeLists.txt  test_sat_event.c
modules/builtin/sat_file/lib/: CMakeLists.txt
modules/builtin/sat_file/manpages/: CMakeLists.txt  sat_file.3
modules/builtin/sat_file/samples/: CMakeLists.txt  sat_file_sample.c
modules/builtin/sat_file/tests/: CMakeLists.txt  test_sat_file.c
modules/builtin/sat_iterator/lib/: CMakeLists.txt
modules/builtin/sat_linked_list/lib/: CMakeLists.txt
modules/builtin/sat_linked_list/manpages/: CMakeLists.txt  sat_linked_list.3
modules/builtin/sat_linked_list/samples/: CMakeLists.txt
modules/builtin/sat_linked_list/tests/: CMakeLists.txt  test_sat_linked_list.c
modules/builtin/sat_log/lib/: CMakeLists.txt
modules/builtin/sat_log/manpages/: CMakeLists.txt  sat_log.3
modules/builtin/sat_log/samples/: CMakeLists.txt
modules/builtin/sat_log/tests/: CMakeLists.txt
modules/builtin/sat_map/lib/: CMakeLists.txt
modules/builtin/sat_map/manpages/: CMakeLists.txt
modules/builtin/sat_map/samples/: CMakeLists.txt
modules/builtin/sat_map/tests/: CMakeLists.txt
modules/builtin/sat_network/lib/: CMakeLists.txt
modules/builtin/sat_network/manpages/: CMakeLists.txt  sat_network.3
modules/builtin/sat_network/samples/: CMakeLists.txt
modules/builtin/sat_network/tests/: CMakeLists.txt  (+1 more)
modules/builtin/sat_scheduler/: CMakeLists.txt
modules/builtin/sat_status/: CMakeLists.txt
modules/main/: CMakeLists.txt
modules/main/include/: sat.h  sat_builtin.h  sat_optionals.h
modules/optionals/: CMakeLists.txt
modules/optionals/sat_curl/: CMakeLists.txt
modules/optionals/sat_gtk3/: CMakeLists.txt
modules/optionals/sat_json/: CMakeLists.txt
modules/optionals/sat_kafka/: CMakeLists.txt
modules/optionals/sat_loki/: CMakeLists.txt
modules/optionals/sat_mqtt/: CMakeLists.txt
modules/optionals/sat_mysql/: CMakeLists.txt
modules/optionals/sat_opengl/: CMakeLists.txt
modules/optionals/sat_postgres/: CMakeLists.txt
modules/optionals/sat_properties/: CMakeLists.txt
modules/optionals/sat_redis/: CMakeLists.txt
modules/optionals/sat_sdl/: CMakeLists.txt
modules/optionals/sat_sqlite/: CMakeLists.txt
modules/optionals/sat_webserver/: CMakeLists.txt
modules/sat_iterator/lib/: CMakeLists.txt
samples/process/: CMakeLists.txt  hello.c  hello_args.c  sat_process_monitor_sample.c  sat_process_sample.c
samples/udp/: CMakeLists.txt  sat_udp_client_sample.c  sat_udp_multicast_sample.c  sat_udp_server_sample.c
tests/: CMakeLists.txt  test_sat_array.c  test_sat_cache.c  test_sat_file.c  test_sat_iterator.c  test_sat_linked_list.c  test_sat_log.c  test_sat_map.c  test_sat_network.c  test_sat_plugin.c  test_sat_queue.c  test_sat_queue_ipc.c  test_sat_scheduler.c  test_sat_set.c  test_sat_shared_memory.c  test_sat_stack.c  test_sat_status.c  test_sat_tcp.c  test_sat_time.c  test_sat_udp.c  test_sat_uuid.c  test_sat_validation.c  test_sat_worker.c
tests/test_curl/: CMakeLists.txt  Dockerfile  db.json  test_sat_curl.c
tests/test_gtk3/: CMakeLists.txt  test_sat_gtk3_button.c  test_sat_gtk3_window.c
tests/test_ini/: CMakeLists.txt  configuration.ini  test_sat_properties.c
tests/test_json/: CMakeLists.txt  test_sat_json.c
tests/test_kafka/: CMakeLists.txt  docker-compose.yaml  test_sat_kafka.c
tests/test_mqtt/: CMakeLists.txt  docker-compose.yaml  mosquitto.conf  test_sat_mqtt.c
tests/test_mysql/: CMakeLists.txt  docker-compose.yaml  test_sat_mysql.c
tests/test_opengl/: CMakeLists.txt  README.md  test_sat_opengl_cube_rotation.c  test_sat_opengl_many_cube_rotation.c  test_sat_opengl_many_cube_rotation_camera.c  test_sat_opengl_program.c  test_sat_opengl_triangle.c  test_sat_opengl_triangle_fov.c  test_sat_opengl_triangle_indexes.c  test_sat_opengl_triangle_texture.c  test_sat_opengl_triangle_texture2.c  test_sat_opengl_triangle_transform.c  test_sat_opengl_triangle_uniform.c
tests/test_postgres/: CMakeLists.txt  docker-compose.yaml  test_sat_postgres.c
tests/test_postgres/sql/: schema.sql
tests/test_redis/: CMakeLists.txt  test_sat_redis.c
tests/test_sat_array/: test_sat_array_basic.c  test_sat_array_dynamic.c  test_sat_array_edge_cases.c  test_sat_array_iterator.c  test_sat_array_operations.c  test_sat_array_static.c
tests/test_sdl/: CMakeLists.txt  test_sat_sdl_bmp.c  test_sat_sdl_event.c  test_sat_sdl_images.c  test_sat_sdl_init.c  test_sat_sdl_text.c  test_sat_sdl_viewport.c
tests/test_sqlite/: CMakeLists.txt  test_sat_sqlite.c
tests/test_webserver/: CMakeLists.txt  test_sat_webserver.c
(+582 files in other folders)
