# create_test (test_sat_file)
# create_test (test_sat_time)
create_test (test_sat_status)
# create_test (test_sat_log)
# create_test (test_sat_validation)
# create_test (test_sat_stack)
# create_test (test_sat_map)
create_test (test_sat_tcp)
# create_test (test_sat_worker)
create_test (test_sat_scheduler)
create_test (test_sat_shared_memory)
create_test (test_sat_queue_ipc)


add_subdirectory (test_mysql)
add_subdirectory (test_postgres)
add_subdirectory (test_sqlite)
add_subdirectory (test_kafka)
add_subdirectory (test_redis)
add_subdirectory (test_webserver)
add_subdirectory (test_json)
add_subdirectory (test_curl)
add_subdirectory (test_mqtt)
add_subdirectory (test_ini)
add_subdirectory (test_sdl)
add_subdirectory (test_gtk3)
add_subdirectory (test_opengl)