add_subdirectory (sat_status)
add_subdirectory (sat_iterator)
add_subdirectory (sat_array)
add_subdirectory (sat_cache)
add_subdirectory (sat_plugin)
add_subdirectory (sat_uuid)
add_subdirectory (sat_queue)
add_subdirectory (sat_linked_list)
add_subdirectory (sat_directory)
add_subdirectory (sat_set)
add_subdirectory (sat_event)
add_subdirectory (sat_channel)
add_subdirectory (sat_udp)
add_subdirectory (sat_network)
add_subdirectory (sat_worker)
add_subdirectory (sat_time)