add_subdirectory (sat_properties)
add_subdirectory (sat_curl)
add_subdirectory (sat_json)
add_subdirectory (sat_webserver)
add_subdirectory (sat_loki)
add_subdirectory (sat_sqlite)
add_subdirectory (sat_mysql)
add_subdirectory (sat_redis)
add_subdirectory (sat_postgres)
add_subdirectory (sat_kafka)
add_subdirectory (sat_mqtt)
add_subdirectory (sat_sdl)
add_subdirectory (sat_opengl)
add_subdirectory (sat_gtk3)